# cipr-shell

./: CMakeLists.txt  README.md  install.sh
.github/workflows/: cmake.yml
docs/: MANUAL.md
src/: main.cpp
src/AST/AstPrinter/: AstPrinter.cpp
src/AST/Node/: Node.cpp  Node.h
src/Common/: Return.h  RuntimeError.h
src/Core/: Core.cpp  Core.h
src/Interpreter/: Callable.h  Function.cpp  Function.h  Interpreter.cpp  Interpreter.h
src/Native/: NativeRegistry.cpp  NativeRegistry.h
src/Native/Modules/: Core.h  String.h  Sys.h
src/Parser/: Parser.cpp  Parser.h
src/Scanner/: Scanner.cpp  Scanner.h
src/Token/: Token.cpp  Token.h
